--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,6 @@
-<h1>Pages#home</h1>
+<div class="jumbotron">
+<h1>Stukdo</h1>
+<p>This is my smart to do list Ruby on Rail App</p>
+<%=link_to "Sign Up", "#", class: "btn btn-primary btn-lg" %>
 
-<%= render "text" %>
+</div>
