--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -1,11 +1,7 @@
 <%= simple_form_for(@task) do |f| %>
   <%= f.error_notification %>
+  <%= f.input :content %>
+  <%= f.input :state %>
 
-  <div class="form-inputs">
-    <%= f.input :content %>
-  </div>
-
-  <div class="form-actions">
-    <%= f.button :submit %>
-  </div>
+  <%= f.button :submit, class: "btn btn-lg btn-primary btn-block" %>
 <% end %>
