--- a/app/views/pages/test.html.erb
+++ b/app/views/pages/test.html.erb
@@ -4,7 +4,7 @@
 <div class="panel panel-info">
 <div class="panel-heading">Heading </div>
 <div class="panel-body">Content</div>
-<div class="panel-footer text center">Footer</div>
+<div class="panel-footer text-center">Footer</div>
 
 </div>
 </div>
