--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -1,7 +1,6 @@
-<%= simple_form_for(@task) do |f| %>
+<%= simple_form_for(@task , html: {class: "form-signin"}) do |f| %>
   <%= f.error_notification %>
   <%= f.input :content %>
-  <%= f.input :state %>
 
   <%= f.button :submit, class: "btn btn-lg btn-primary btn-block" %>
 <% end %>
